ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__LH_Export_Lookups__c/LH__LH_Export_Lookups__c.object-meta.xml
<CustomObject>
    <label>Lookup Export</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>LH_Export_Lookups ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>