ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__LH_Export_Lookups__c/fields/LH__LookupData__c.field-meta.xml
<CustomField>
    <fullName>LH__LookupData__c</fullName>
    <label>LookupData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>