ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__LH_Export_Lookups__c/fields/LH__LookupKey__c.field-meta.xml
<CustomField>
    <fullName>LH__LookupKey__c</fullName>
    <label>LookupKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>