ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__LH_Export_Lookups__c/fields/LH__Type__c.field-meta.xml
<CustomField>
    <fullName>LH__Type__c</fullName>
    <description>Type is either a lookup ustom setting or a related LH object</description>
    <label>Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>